--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <title>Title</title>
+  <title>Api Loja</title>
 </head>
 
 <body style="background-color:  #1f1f1f; text-align: center; display: flex; flex-direction: column; min-height: 100%;">
